--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>243</width>
-    <height>461</height>
+    <width>258</width>
+    <height>477</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -46,7 +46,7 @@
            <string>笔画</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -80,7 +80,7 @@
            <string>前景</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -90,7 +90,7 @@
            <string>背景</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -100,7 +100,7 @@
            <string>橡皮</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_4</string>
+           <string notr="true">buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -137,7 +137,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -150,7 +150,7 @@
            <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -160,7 +160,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_3</string>
+           <string notr="true">buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -196,7 +196,7 @@
            <string>矩形</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -206,7 +206,7 @@
            <string>多边形</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -216,7 +216,7 @@
            <string>手工</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup</string>
+           <string notr="true">buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -281,7 +281,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -291,7 +291,7 @@
            <string>中</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -301,7 +301,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string>buttonGroup_2</string>
+           <string notr="true">buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -328,44 +328,8 @@
      <property name="title">
       <string>图像基本操作</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
-        <item>
-         <widget class="QRadioButton" name="radioScale">
-          <property name="text">
-           <string>尺寸</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioBrightness">
-          <property name="text">
-           <string>亮度</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_8">
-        <item>
-         <widget class="QRadioButton" name="radioNotColor">
-          <property name="text">
-           <string>反色</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioMesuarement">
-          <property name="text">
-           <string>测量</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="2" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
          <widget class="QLabel" name="labelSliderLeft">
@@ -385,6 +349,84 @@
          <widget class="QLabel" name="labelSliderRight">
           <property name="text">
            <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="1" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_8">
+        <item>
+         <widget class="QRadioButton" name="radioNotColor">
+          <property name="text">
+           <string>反色</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioMesuarement">
+          <property name="text">
+           <string>测量</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="3" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_10">
+        <item>
+         <widget class="Line" name="_line">
+          <property name="minimumSize">
+           <size>
+            <width>50</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>61</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="_labelRulerText">
+          <property name="minimumSize">
+           <size>
+            <width>120</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>81</width>
+            <height>17</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="0" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QRadioButton" name="radioScale">
+          <property name="text">
+           <string>尺寸</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioBrightness">
+          <property name="text">
+           <string>亮度</string>
           </property>
          </widget>
         </item>
