--- a/login.ui
+++ b/login.ui
@@ -29,13 +29,13 @@
       <bool>true</bool>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="centralStackedWidgetPage1">
       <widget class="QLabel" name="_icon">
        <property name="geometry">
         <rect>
-         <x>20</x>
+         <x>10</x>
          <y>70</y>
          <width>131</width>
          <height>61</height>
@@ -67,8 +67,8 @@
       <widget class="QLabel" name="_icon_2">
        <property name="geometry">
         <rect>
-         <x>20</x>
-         <y>150</y>
+         <x>10</x>
+         <y>180</y>
          <width>131</width>
          <height>61</height>
         </rect>
@@ -80,7 +80,7 @@
       <widget class="QPushButton" name="_cancel">
        <property name="geometry">
         <rect>
-         <x>385</x>
+         <x>367</x>
          <y>250</y>
          <width>85</width>
          <height>30</height>
@@ -114,7 +114,7 @@
       <widget class="QPushButton" name="_login">
        <property name="geometry">
         <rect>
-         <x>252</x>
+         <x>262</x>
          <y>250</y>
          <width>85</width>
          <height>30</height>
@@ -262,9 +262,9 @@
        <property name="geometry">
         <rect>
          <x>310</x>
-         <y>320</y>
-         <width>98</width>
-         <height>27</height>
+         <y>310</y>
+         <width>85</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
@@ -275,9 +275,9 @@
        <property name="geometry">
         <rect>
          <x>410</x>
-         <y>320</y>
-         <width>98</width>
-         <height>27</height>
+         <y>310</y>
+         <width>85</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
@@ -326,7 +326,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -364,7 +364,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -440,7 +440,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -594,7 +594,7 @@
          <x>242</x>
          <y>68</y>
          <width>85</width>
-         <height>30</height>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
