--- a/imageproperties.ui
+++ b/imageproperties.ui
@@ -26,7 +26,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>7</number>
+    <number>5</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -654,12 +654,12 @@
       <rect>
        <x>0</x>
        <y>310</y>
-       <width>621</width>
+       <width>601</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 油样编号根据 采样日期 采样时间 机号 动部件类别自动生成, 最后一位为标识位默认是0, &lt;/p&gt;&lt;p&gt;如用户确认是同一时间采集的不同油样,则用户可对编号顺序编为1,2..., 不超过9.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 油样编号根据 采样日期 采样时间 机号 动部件类别自动生成, 最后一位为标识位默认是0, &lt;/p&gt;&lt;p align=&quot;center&quot;&gt;如用户确认是同一时间采集的不同油样,则用户可对编号顺序编为1,2..., 不超过9.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
@@ -677,6 +677,30 @@
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_14">
+      <item row="2" column="4">
+       <widget class="QLabel" name="label_69">
+        <property name="text">
+         <string>收油样日期</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="5">
+       <widget class="QDateEdit" name="_dateEditOilAnalyzeReceiveDate"/>
+      </item>
+      <item row="2" column="7">
+       <widget class="QComboBox" name="_comboBoxOilAnalyzeReceiveGuy">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="2">
+       <widget class="QLabel" name="label_82">
+        <property name="text">
+         <string>铁谱分析人</string>
+        </property>
+       </widget>
+      </item>
       <item row="10" column="7">
        <widget class="QComboBox" name="_comboBoxOilAnalyzeMentalEquip">
         <property name="editable">
@@ -882,22 +906,8 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_67">
-        <property name="text">
-         <string>送检原因</string>
-        </property>
-       </widget>
-      </item>
       <item row="10" column="5">
        <widget class="QDateEdit" name="_dateEditOilAnalyzeMentalDate"/>
-      </item>
-      <item row="10" column="2">
-       <widget class="QLabel" name="label_82">
-        <property name="text">
-         <string>铁谱分析人</string>
-        </property>
-       </widget>
       </item>
       <item row="6" column="8">
        <widget class="QLabel" name="label_80">
@@ -990,33 +1000,6 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1" colspan="3">
-       <widget class="QLineEdit" name="_editOilAnalyzeReason"/>
-      </item>
-      <item row="2" column="4">
-       <widget class="QLabel" name="label_69">
-        <property name="text">
-         <string>收油样日期</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="5">
-       <widget class="QDateEdit" name="_dateEditOilAnalyzeReceiveDate"/>
-      </item>
-      <item row="2" column="6">
-       <widget class="QLabel" name="label_70">
-        <property name="text">
-         <string>收油样人</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="7">
-       <widget class="QComboBox" name="_comboBoxOilAnalyzeReceiveGuy">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="6" column="1">
        <widget class="QComboBox" name="_comboBoxOilAnalyzeLightMethod">
         <property name="editable">
@@ -1031,6 +1014,23 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="6">
+       <widget class="QLabel" name="label_70">
+        <property name="text">
+         <string>收油样人</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_67">
+        <property name="text">
+         <string>送检原因</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" colspan="3">
+       <widget class="QLineEdit" name="_editOilAnalyzeReason"/>
+      </item>
      </layout>
     </widget>
     <widget class="QLabel" name="label_120">
@@ -1038,12 +1038,12 @@
       <rect>
        <x>0</x>
        <y>310</y>
-       <width>601</width>
+       <width>571</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱分析报告编号继承油样编号自动生成, 如油样编号为LH046072011091615B0, &lt;/p&gt;&lt;p&gt;则铁谱分析报告编号为LH046072011091615B0TPRReport, 其它分析报告编号类似&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱分析报告编号继承油样编号自动生成, 如油样编号为LH046072011091615B0, &lt;/p&gt;&lt;p align=&quot;center&quot;&gt;       则铁谱分析报告编号为LH046072011091615B0TPRReport, 其它分析报告编号类似&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
@@ -1165,12 +1165,12 @@
       <rect>
        <x>0</x>
        <y>310</y>
-       <width>641</width>
+       <width>611</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱片编号根据 油样编号 分析铁谱仪型号 自动生成, 最后两位是铁谱片顺序编号, 默认是00, &lt;/p&gt;&lt;p&gt;如用户确认是同一油样的不同谱片, 则用户可手工顺序编为01,02,03, ..., 不超过99.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱片编号根据 油样编号 分析铁谱仪型号 自动生成, 最后两位是铁谱片顺序编号, 默认是00, &lt;/p&gt;&lt;p align=&quot;center&quot;&gt;如用户确认是同一油样的不同谱片, 则用户可手工顺序编为01,02,03, ..., 不超过99.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
@@ -1178,176 +1178,226 @@
     <attribute name="title">
      <string>铁谱图片采集信息</string>
     </attribute>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QLabel" name="label_121">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>40</y>
-       <width>741</width>
-       <height>134</height>
+       <y>310</y>
+       <width>511</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱图片编号由铁谱片编号 放大倍数 光源类型 图片采集区域自动生成, &lt;/p&gt;&lt;p align=&quot;center&quot;&gt;最后两位是顺序编号, 默认是00, 后续是01, 02, 03, ..., 不超过19.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>41</y>
+       <width>820</width>
+       <height>187</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0" colspan="2">
+      <item row="0" column="0">
        <widget class="QLabel" name="label_59">
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片采集区域&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="1">
        <widget class="QComboBox" name="_comboBoxMentalSampleArea">
+        <property name="minimumSize">
+         <size>
+          <width>181</width>
+          <height>27</height>
+         </size>
+        </property>
         <property name="editable">
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <widget class="QComboBox" name="_comboBoxMentalSampleImageID">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QLabel" name="label_55">
-        <property name="text">
-         <string>显微镜型号</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="7" colspan="2">
-       <widget class="QLabel" name="label_62">
-        <property name="text">
-         <string>铁谱图片识别分析信息</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="9">
-       <widget class="QLineEdit" name="_editMentalSampleAnalysis"/>
-      </item>
-      <item row="4" column="3">
-       <widget class="QLabel" name="label_61">
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" rowspan="2" colspan="2">
-       <widget class="QLabel" name="label_52">
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片编号&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="2">
-       <widget class="QComboBox" name="_comboBoxMentalSampleSamplerType">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QLabel" name="label_56">
-        <property name="text">
-         <string>图像采集器型号</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2">
-       <widget class="QComboBox" name="_comboBoxMentalSampleGuy">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0" colspan="2">
-       <widget class="QLabel" name="label_60">
-        <property name="text">
-         <string>铁谱图片采集人</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
+      <item row="0" column="2">
        <widget class="QLabel" name="label_58">
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;放大倍数&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="3" rowspan="2">
-       <widget class="QLabel" name="label_53">
-        <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱片编号&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="4" colspan="3">
-       <widget class="QComboBox" name="_comboBoxMentalSampleMicroType">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="4" colspan="3">
-       <widget class="QComboBox" name="_comboBoxMentalSampleID">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="4" colspan="3">
+      <item row="0" column="3">
        <widget class="QLineEdit" name="_editMentalSampleEnlarger"/>
       </item>
-      <item row="4" column="4" colspan="6">
-       <widget class="QLineEdit" name="_editMentalSamplePath">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="9">
-       <widget class="QComboBox" name="_comboBoxMentalSampleReportID">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="9">
-       <widget class="QComboBox" name="_comboBoxMentalSampleLightType">
-        <property name="editable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="7" colspan="2">
+      <item row="0" column="4">
        <widget class="QLabel" name="label_57">
         <property name="text">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;光源类型&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="7" colspan="2">
+      <item row="0" column="5">
+       <widget class="QComboBox" name="_comboBoxMentalSampleLightType">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_52">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片编号&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="_comboBoxMentalSampleImageID">
+        <property name="minimumSize">
+         <size>
+          <width>181</width>
+          <height>27</height>
+         </size>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_53">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱片编号&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QComboBox" name="_comboBoxMentalSampleID">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4">
        <widget class="QLabel" name="label_54">
         <property name="text">
          <string>铁谱分析报告编号</string>
         </property>
        </widget>
       </item>
+      <item row="1" column="5">
+       <widget class="QComboBox" name="_comboBoxMentalSampleReportID">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_56">
+        <property name="text">
+         <string>图像采集器型号</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="_comboBoxMentalSampleSamplerType">
+        <property name="minimumSize">
+         <size>
+          <width>181</width>
+          <height>27</height>
+         </size>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_55">
+        <property name="text">
+         <string>显微镜型号</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QComboBox" name="_comboBoxMentalSampleMicroType">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="4">
+       <widget class="QLabel" name="label_62">
+        <property name="text">
+         <string>铁谱图片识别分析信息</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="5">
+       <widget class="QLineEdit" name="_editMentalSampleAnalysis"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_60">
+        <property name="text">
+         <string>铁谱图片采集人</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="_comboBoxMentalSampleGuy">
+        <property name="minimumSize">
+         <size>
+          <width>181</width>
+          <height>27</height>
+         </size>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QLabel" name="label_61">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="3">
+       <widget class="QLineEdit" name="_editMentalSamplePath">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_122">
+        <property name="text">
+         <string>原始图像</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="_labelOriginalImage_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>53</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
      </layout>
-    </widget>
-    <widget class="QLabel" name="label_121">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>310</y>
-       <width>651</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;*说明&lt;/span&gt;: 铁谱图片编号由铁谱片编号 放大倍数 光源类型 图片采集区域自动生成, 最后两位是顺序编号, &lt;/p&gt;&lt;p&gt;默认是00, 后续是01, 02, 03, ..., 不超过19.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_9">
