--- a/imagecompletionui.ui
+++ b/imagecompletionui.ui
@@ -104,7 +104,7 @@
        </widget>
       </item>
       <item row="0" column="0">
-       <widget class="QTabWidget" name="_centralTabWidget">
+       <widget class="QStackedWidget" name="_centralStackedWidget">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -184,10 +184,7 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
-        <widget class="QWidget" name="_editTab">
-         <attribute name="title">
-          <string>Edit</string>
-         </attribute>
+        <widget class="QWidget" name="_centralStackedWidgetPage1" native="true">
          <widget class="QScrollArea" name="scrollArea">
           <property name="geometry">
            <rect>
@@ -222,24 +219,422 @@
           </widget>
          </widget>
         </widget>
-        <widget class="QWidget" name="_resultTab">
-         <attribute name="title">
-          <string>Result</string>
-         </attribute>
-         <widget class="QTreeWidget" name="treeWidget">
+        <widget class="QWidget" name="page">
+         <widget class="QLabel" name="_label1">
           <property name="geometry">
            <rect>
-            <x>40</x>
-            <y>70</y>
-            <width>256</width>
-            <height>192</height>
+            <x>20</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
            </rect>
           </property>
-          <column>
-           <property name="text">
-            <string notr="true">1</string>
-           </property>
-          </column>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label2">
+          <property name="geometry">
+           <rect>
+            <x>130</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label3">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label5">
+          <property name="geometry">
+           <rect>
+            <x>480</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label6">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label4">
+          <property name="geometry">
+           <rect>
+            <x>370</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label14">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label12">
+          <property name="geometry">
+           <rect>
+            <x>370</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label13">
+          <property name="geometry">
+           <rect>
+            <x>480</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label10">
+          <property name="geometry">
+           <rect>
+            <x>130</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label11">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label9">
+          <property name="geometry">
+           <rect>
+            <x>20</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label26">
+          <property name="geometry">
+           <rect>
+            <x>130</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label29">
+          <property name="geometry">
+           <rect>
+            <x>480</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label25">
+          <property name="geometry">
+           <rect>
+            <x>20</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label22">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label21">
+          <property name="geometry">
+           <rect>
+            <x>480</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label20">
+          <property name="geometry">
+           <rect>
+            <x>370</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label18">
+          <property name="geometry">
+           <rect>
+            <x>130</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label19">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label27">
+          <property name="geometry">
+           <rect>
+            <x>250</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label17">
+          <property name="geometry">
+           <rect>
+            <x>20</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label28">
+          <property name="geometry">
+           <rect>
+            <x>370</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label30">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label24">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label15">
+          <property name="geometry">
+           <rect>
+            <x>710</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label23">
+          <property name="geometry">
+           <rect>
+            <x>710</x>
+            <y>270</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label31">
+          <property name="geometry">
+           <rect>
+            <x>710</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label8">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label7">
+          <property name="geometry">
+           <rect>
+            <x>710</x>
+            <y>20</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label32">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>390</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+         <widget class="QLabel" name="_label16">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>140</y>
+            <width>91</width>
+            <height>91</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
          </widget>
         </widget>
        </widget>
