--- a/ImageCompletion.qrc
+++ b/ImageCompletion.qrc
@@ -28,6 +28,6 @@
         <file>icons/login_logo.png</file>
         <file>icons/login_bg2_.jpg</file>
         <file>icons/login_bg.jpg</file>
-        <file>icons/login_logo2.jpg</file>
+        <file>icons/login_logo2.png</file>
     </qresource>
 </RCC>
