--- a/login.ui
+++ b/login.ui
@@ -29,7 +29,7 @@
       <bool>true</bool>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="centralStackedWidgetPage1">
       <widget class="QLabel" name="_icon">
@@ -42,7 +42,13 @@
         </rect>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="ImageCompletion.qrc">:/new/prefix1/icons/login_logo.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="_labelMainTitle">
@@ -62,19 +68,6 @@
        </property>
        <property name="scaledContents">
         <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QLabel" name="_icon_2">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>180</y>
-         <width>131</width>
-         <height>61</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
        </property>
       </widget>
       <widget class="QPushButton" name="_cancel">
@@ -228,6 +221,25 @@
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="_icon_2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>160</y>
+         <width>131</width>
+         <height>61</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="ImageCompletion.qrc">:/new/prefix1/icons/login_logo2.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
        </property>
       </widget>
      </widget>
@@ -627,6 +639,8 @@
   <tabstop>_comboBoxResult</tabstop>
   <tabstop>_comboBoxMask</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="ImageCompletion.qrc"/>
+ </resources>
  <connections/>
 </ui>
