--- a/advancesearchdlg.ui
+++ b/advancesearchdlg.ui
@@ -1543,7 +1543,7 @@
                <x>0</x>
                <y>0</y>
                <width>271</width>
-               <height>391</height>
+               <height>429</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -2401,6 +2401,26 @@
         </item>
         <item>
          <spacer name="verticalSpacer_10">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="delAllButton">
+          <property name="text">
+           <string>清空所有数据</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="verticalSpacer_12">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
